build-lxd.yml: Add missing quote
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: script
         run: |
-          if [[ "${LXD_ARCH}" == "arm64 ]]
+          if [[ "${LXD_ARCH}" == "arm64" ]]
           then
             echo "runner_arch=ARM64" >> $GITHUB_OUTPUT
           else
