build-lxd.yml: Fix syntax
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -45,7 +45,7 @@ jobs:
       - determine-runner
     runs-on: ubuntu-20.04
     steps:
-      debug:
+      - name: debug
         run: echo "${{ needs.determine-runner.outputs.runner_arch }}"
 
   build-current:
