build-lxd.yml: Fix missing id for determine-runner script step
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -32,6 +32,7 @@ jobs:
       runner_arch: ${{ steps.script.outputs.runner_arch }}
     steps:
       - name: script
+        id: script
         run: |
           if [[ "${LXD_ARCH}" == "arm64" ]]
           then
