build-lxd.yml: Allow 'setup firefox' to fail (not required on self-hosted runner)
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -296,6 +296,7 @@ jobs:
           EOF
       - name: Setup Firefox
         uses: browser-actions/setup-firefox@latest
+        continue-on-error: true
       - name: Setup GeckoDriver
         uses: ChlodAlejandro/setup-geckodriver@latest
         with:
