Allow 'fix lxd' step to fail
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -285,6 +285,7 @@ jobs:
         with:
           lxd_version: latest/stable
       - name: Fix LXD
+        continue-on-error: true
         run: |
           lxc profile create network
           cat <<EOF | lxc profile edit network
