--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -312,8 +312,11 @@ jobs:
       - name: Launch ncp container
         run: |
           set -x
+          . ./build/buildlib.sh
           lxc delete -q -f ncp || true
-          lxc image import -q "./${ARTIFACT_FILE?}" --alias "ncp/test"
+          lxc image delete ncp/test || true
+          lxc image delete "ncp/${version}" || true
+          lxc image import -q "./${ARTIFACT_FILE?}" --alias "ncp/test" || true
           systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/test" ncp || \
           sudo systemd-run --scope -p "Delegate=yes" lxc launch -q "ncp/test" ncp 
           lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
