--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,11 +40,19 @@ permissions:
   contents: write
 
 jobs:
-  lxd:
+  lxd-x86:
     if: ${{ inputs.lxd || github.event_name != 'workflow_dispatch' }}
     uses: ./.github/workflows/build-lxd.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      arch: 'x86'
+    secrets: inherit
+  lxd-arm64:
+    if: ${{ inputs.lxd || github.event_name != 'workflow_dispatch' }}
+    uses: ./.github/workflows/build-lxd.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      arch: 'arm64'
     secrets: inherit
 
   docker-x86:
@@ -148,18 +156,28 @@ jobs:
       board_name: OdroidC2
     secrets: inherit
 
-  lxd-release:
+  lxd-x86-release:
     needs:
       - github-release
-      - lxd
+      - lxd-x86
     if: ${{ inputs.lxd || github.event_name != 'workflow_dispatch' }}
     uses: ./.github/workflows/publish-image.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
-      artifact_id: "${{ needs.lxd.outputs.artifact_name }}"
-      artifact_file: "${{ needs.lxd.outputs.artifact_file }}"
+      artifact_id: "${{ needs.lxd-x86.outputs.artifact_name }}"
+      artifact_file: "${{ needs.lxd-x86.outputs.artifact_file }}"
       dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
-    secrets: inherit
+  lxd-arm64-release:
+    needs:
+      - github-release
+      - lxd-arm64
+    if: ${{ inputs.lxd || github.event_name != 'workflow_dispatch' }}
+    uses: ./.github/workflows/publish-image.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      artifact_id: "${{ needs.lxd-arm64.outputs.artifact_name }}"
+      artifact_file: "${{ needs.lxd-arm64.outputs.artifact_file }}"
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
 
   raspberrypi-release:
     needs:
