Add SYNCHOURS to config
Signed-off-by: Martin <mayermart@users.noreply.github.com>

--- a/etc/ncp-config.d/nc-rsync-auto.cfg
+++ b/etc/ncp-config.d/nc-rsync-auto.cfg
@@ -29,6 +29,12 @@
       "name": "Sync periodicity (in days)",
       "value": "3",
       "suggest": "3"
+    },
+    {
+      "id": "SYNCHOURS",
+      "name": "Sync periodicity (hour(s) of day)",
+      "value": "5",
+      "suggest": "5"
     }
   ]
 }
