Add SYNCHOUR to config
Signed-off-by: Martin <mayermart@users.noreply.github.com>

--- a/etc/ncp-config.d/nc-rsync-auto.cfg
+++ b/etc/ncp-config.d/nc-rsync-auto.cfg
@@ -31,8 +31,8 @@
       "suggest": "3"
     },
     {
-      "id": "SYNCHOURS",
-      "name": "Sync periodicity (hour(s) of day)",
+      "id": "SYNCHOUR",
+      "name": "Hour of Day when syncing",
       "value": "5",
       "suggest": "5"
     }
