Add SYNCHOUR to config
Signed-off-by: Martin <mayermart@users.noreply.github.com>

--- a/etc/ncp-config.d/nc-snapshot-sync.cfg
+++ b/etc/ncp-config.d/nc-snapshot-sync.cfg
@@ -36,6 +36,12 @@
       "name": "Sync periodicity (in days)",
       "value": "1",
       "suggest": "1"
+    },
+    {
+      "id": "SYNCHOUR",
+      "name": "Hour of Day when syncing",
+      "value": "4",
+      "suggest": "4"
     }
   ]
 }
