Add BACKUPHOUR to config
Signed-off-by: Martin <mayermart@users.noreply.github.com>

--- a/etc/ncp-config.d/nc-backup-auto.cfg
+++ b/etc/ncp-config.d/nc-backup-auto.cfg
@@ -38,6 +38,12 @@
       "value": "7"
     },
     {
+      "id": "BACKUPHOUR",
+      "name": "Hour of Day to run the Backup",
+      "suggest": "3",
+      "value": "3"
+    },
+    {
       "id": "BACKUPLIMIT",
       "name": "Number of backups to keep",
       "suggest": "4",
