build-lxd.yaml Always use runner ubuntu-20.04 for covering LXD to LXC image
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -386,9 +386,8 @@ jobs:
 
   convert-to-lxc-image:
     needs:
-      - determine-runner
       - build-current
-    runs-on: ${{ needs.determine-runner.outputs.runner_label }}
+    runs-on: ubuntu-20.04
     outputs:
       artifact_name: "${{ steps.lxd-to-lxc.outputs.artifact_name }}"
       artifact_file: "${{ steps.lxd-to-lxc.outputs.artifact_file }}"
