91-ncp.cnf.sh: Increase max_allowed_packet to avoid errors on large sql queries
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/SSH.cfg
+++ b/etc/ncp-config.d/SSH.cfg
@@ -15,8 +15,8 @@
     {
       "id": "USER",
       "name": "User",
-      "value": "root",
-      "suggest": "root"
+      "value": "",
+      "suggest": "ncpadmin"
     },
     {
       "id": "PASS",
