--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -61,7 +61,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - shell: bash
+      - name: find reference version
+        shell: bash
         id: find-version
         run: |
           set -e
@@ -82,7 +83,8 @@ jobs:
           fi
           echo "Previous version is '$version'"
           echo "previous_version=${version}" >> $GITHUB_OUTPUT
-      - run: |
+      - name: Generate ssh key
+        run: |
           set -x
           mkdir -p ./.ssh
           ssh-keygen -t ed25519 -f ".ssh/automation_ssh_key"
