.github/workflows: Only trigger docker CI for docker-* tags and branches
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -16,13 +16,13 @@ on:
         default: 'x86'
   push:
     branches:
-      - master
-      - devel
+      - docker-stable
+      - docker-devel
   pull_request:
     branches:
-      - master
-      - devel
-      - release/*
+      - docker-stable
+      - docker-devel
+      - release/docker/*
 
 jobs:
   build:
