--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,12 @@ on:
         required: false
         default: false
   push:
-    tags: ["v*"]
+    tags:
+      - "v*"
+      - "docker-v*"
     branches:
       - master
+      - docker-stable
 
 permissions:
   contents: write
@@ -56,7 +59,7 @@ jobs:
     secrets: inherit
 
   docker-x86:
-    if: ${{ inputs.docker || github.event_name != 'workflow_dispatch' }}
+    if: ${{ inputs.docker || ( github.event_name != 'workflow_dispatch' && startsWith(github.ref_name, 'docker-') ) }}
     uses: ./.github/workflows/build-docker.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -64,7 +67,7 @@ jobs:
     secrets: inherit
 
   docker-armhf:
-    if: ${{ inputs.docker || github.event_name != 'workflow_dispatch' }}
+    if: ${{ inputs.docker || ( github.event_name != 'workflow_dispatch' && startsWith(github.ref_name, 'docker-') ) }}
     uses: ./.github/workflows/build-docker.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
@@ -72,7 +75,7 @@ jobs:
     secrets: inherit
 
   docker-arm64:
-    if: ${{ inputs.docker || github.event_name != 'workflow_dispatch' }}
+    if: ${{ inputs.docker || ( github.event_name != 'workflow_dispatch' && startsWith(github.ref_name, 'docker-') ) }}
     uses: ./.github/workflows/build-docker.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
