--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -333,7 +333,7 @@ jobs:
             docker tag "thecalcaholic/ncp-internal-${arch}:${{ github.run_id }}" "ownyourbits/nextcloudpi-${arch}:${version?}"
             docker tag "ownyourbits/nextcloudpi-${arch}:${version?}" "ownyourbits/nextcloudpi-${arch}:latest"
             docker push "ownyourbits/nextcloudpi-${arch}:${version?}"
-            [[ "$version" =~ ^v[0-9]+'.'[0-9]+'.'[0-9]+$ ]] && docker push "ownyourbits/nextcloudpi-${arch}:latest"
+            [[ "$version" =~ ^(docker-)?v[0-9]+'.'[0-9]+'.'[0-9]+$ ]] && docker push "ownyourbits/nextcloudpi-${arch}:latest"
           done
 
           docker manifest create ownyourbits/nextcloudpi:${version?} \
@@ -344,7 +344,7 @@ jobs:
 
       - name: Create manifest and push as latest to docker hub
         run: |
-          [[ "${{ github.ref }}" =~ ^'refs/tags/v'[0-9]+'.'[0-9]+'.'[0-9]+$ ]] || {
+          [[ "${{ github.ref }}" =~ ^'refs/tags/'(docker-)?'v'[0-9]+'.'[0-9]+'.'[0-9]+$ ]] || {
             echo "not tagging latest - is a pre-/beta-release"
             exit 0
           }
